# newpagesolutions

./: .gitignore  README.md  app.py  crew.py  crew_v1.py  main.py  pyproject.toml  report.md  start.sh  test.py
config/: agents.yaml  tasks.yaml
tools/: playwright_dynamic_explorer.py  playwright_tool.py
