[project]
name = "newpagesolutions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.6.1",
    "fastapi>=0.123.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "litellm>=1.80.7",
    "playwright>=1.56.0",
    "pydantic>=2.12.5",
    "pytest-playwright>=0.7.2",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
